# algebrex

./: CMakeLists.txt  install.sh
include/: algebrex.h
test/: CMakeLists.txt  algebrex_test.cpp
